# instructionbook

./: pyproject.toml
instructionbook/: instructionbook.py  multipage.py
instructionbook/data/: Share-of-Exports-in-Diamonds.csv
instructionbook/src/: data_preprocess_featuretools.py  facebook_prophet_stocks.py  google_colab.py  language_translation.py  lesson_5_guide.py  sentiment_analysis.py  tsfresh_timeseries_features.py  welcome.py
tests/: test_instructionbook.py
